Dev (#2)
* add Chromecast support

* add chromecast controls
