# src/api/controllers/broadlink.ts
@@ -1,7 +1,7 @@
 import * as HTTP_STATUS from 'http-status-codes';
 import {Get, Post, Put, Route, Body, Query, Header, Path, Response, SuccessResponse, Controller, Tags } from 'tsoa';
 import { broadlinkService } from '../services/broadlink';
-import { BroadlinkDeviceInfo, BroadlinkDeviceController } from '../models/broadlink';
+import { BroadlinkDeviceInfo, BroadlinkRequest } from '../models/broadlink';
 import { ErrorResponseModel, ResponseModel } from '../models';
 
 @Route('Broadlink')
@@ -11,27 +11,33 @@ export class BroadlinkController extends Controller {
     @Post('Discover')
     @Tags('Broadlink')
     public async discoverBroadlinkDevices(): Promise<ResponseModel> {
-        return await broadlinkService.discoverBroadlinkDevices();
+        const resp = await broadlinkService.discoverBroadlinkDevices();
+        this.setStatus(resp.status);
+        return resp;
     }
 
     @SuccessResponse(HTTP_STATUS.OK, 'OK')
     @Get('Devices')
     @Tags('Broadlink')
     public async getBroadlinkDevices(): Promise<any> {
-        return await broadlinkService.getBroadlinkDevices();
+        const resp = await broadlinkService.getBroadlinkDevices();
+        return resp;
     }
     
     @SuccessResponse(HTTP_STATUS.OK, 'OK')
     @Get('Devices/{deviceId}')
     @Tags('Broadlink')
-    public async getBroadlinkDevice(deviceId: number): Promise<BroadlinkDeviceInfo> {
-        return await broadlinkService.getBroadlinkDevice(deviceId);
+    public async getBroadlinkDevice(@Path('deviceId') deviceId: number): Promise<BroadlinkDeviceInfo> {
+        const resp = await broadlinkService.getBroadlinkDevice(deviceId);
+        return resp;
     }
     
     @SuccessResponse(HTTP_STATUS.NO_CONTENT, 'No content')
     @Put('Devices/{deviceId}/Controller')
     @Tags('Broadlink')
-    public async putBroadlinkDeviceController(deviceId: number, @Body() model: BroadlinkDeviceController): Promise<ResponseModel> {
-        return await broadlinkService.putBroadlinkDeviceController(deviceId, model);
+    public async putBroadlinkDeviceController(@Path('deviceId') deviceId: number, @Body() model: BroadlinkRequest): Promise<ResponseModel> {
+        const resp = await broadlinkService.putBroadlinkDeviceController(deviceId, model);
+        this.setStatus(resp.status);
+        return resp;
     }
 }
