# src/api/services/broadlink.ts
@@ -1,14 +1,14 @@
 import * as Broadlink from 'broadlinkjs';
 import * as HTTP_STATUS from 'http-status-codes';
 import logger from '../../common/logger';
-import { BroadlinkDeviceInfo, BroadlinkDeviceController } from '../models/broadlink';
+import { BroadlinkDeviceInfo, BroadlinkRequest } from '../models/broadlink';
 import { ResponseModel } from '../models';
 import fs = require('fs');
 import { resolve } from 'dns';
 import { Device } from 'broadlinkjs';
 import { Body } from 'tsoa';
 
-const commands = require('../../broadlink/commands.json');
+const broadlinkData = require('../../data/broadlink-commands.json');
 
 class BroadlinkService {
 
@@ -26,7 +26,8 @@ class BroadlinkService {
 
     constructor() {
         this._broadlink = new Broadlink();
-        this._broadlink.on("deviceReady", (dev: any) => {
+
+        this._broadlink.on('deviceReady', (dev: any) => {
 
             if (dev.getType() !== 'RM2') {
                 console.log('Not a supported device yet.');
@@ -51,8 +52,8 @@ class BroadlinkService {
     discoverBroadlinkDevices(): Promise<ResponseModel> {
         return new Promise(async (resolve, reject) => {
             await this._broadlink.discover();
-            const message = "Total discovered devices: " + Object.keys(this._devices).length;
-            resolve({code: HTTP_STATUS.OK, message: message});
+            const message = 'Total discovered devices: ' + Object.keys(this._devices).length;
+            resolve({status: HTTP_STATUS.OK, message: message});
         });
     }
   
@@ -67,46 +68,51 @@ class BroadlinkService {
             const deviceDetails = this._devicesDetails[deviceId];
             if (!deviceDetails) {
                 logger.error('Requested device not found.');
-                reject({code: HTTP_STATUS.NOT_FOUND, message: "Device not found."});
+                reject({status: HTTP_STATUS.NOT_FOUND, message: 'Device not found.'});
             }
             resolve(deviceDetails);
         });
     }
     
-    putBroadlinkDeviceController(deviceId: number, @Body() model: BroadlinkDeviceController): Promise<ResponseModel> {
+    putBroadlinkDeviceController(deviceId: number, @Body() model: BroadlinkRequest): Promise<ResponseModel> {
         return new Promise(async (resolve, reject) => {
             const device = this._devices[deviceId];
             if (!device) {
                 logger.error('Requested device not found.');
-                reject({ code: HTTP_STATUS.NOT_FOUND, message: "Device not found."});
-            }
-            
-            // Get target device type
-            const deviceType = commands[model.device];
-            if (!deviceType) {
-                logger.error('Requested command not found.');
-                reject({ code: HTTP_STATUS.NOT_FOUND, message: "This device type is not supported: " + deviceType})
+                resolve({ status: HTTP_STATUS.NOT_FOUND, message: 'Device not found.'});
             }
 
+            const broadlinkDevice = broadlinkData[model.device]
+            if (!broadlinkDevice) {
+                logger.error('Requested device type not found: ' + broadlinkDevice);
+                resolve({ status: HTTP_STATUS.NOT_FOUND, message: 'Requested device type not found: ' + broadlinkDevice});
+            }
+
+            let response: ResponseModel;
             // Get command
-            const command = deviceType[model.command];
-            if (!command || !command.data) {
-                reject({ code: HTTP_STATUS.NOT_FOUND, message: "This command is not supported: " + deviceType})
+            const command = broadlinkDevice[model.command];
+            if (!command) {
+                logger.error('Requested device type not found.');
+                response = { status: HTTP_STATUS.NOT_FOUND, message: 'This device type is not supported: ' + model.device};
+            } else if (!command.data) {
+                logger.error('Requested command not found.');
+                response = { status: HTTP_STATUS.NOT_FOUND, message: 'This command is not supported: ' + model.device};
+            } else {
+                // Buffered command
+                const hexDataBuffer = new Buffer(command.data, 'hex');
+                // Send the command
+                device.sendData(hexDataBuffer);
+                // If turn off projector, need to send signal twice due to confirmation
+                if (model.device === 'Projector' && model.command === 'TurnOff') {
+                    logger.info('Target device is a projector and requested operation is TurnOff. Sending signal again.');
+                    // Wait a few seconds
+                    await setTimeout(() => {
+                        device.sendData(hexDataBuffer);
+                    }, 3000);
+                }
+                response = { status: HTTP_STATUS.OK, message: 'Command executed successfully.' };
             }
-
-            const hexDataBuffer = new Buffer(command.data, 'hex');
-            device.sendData(hexDataBuffer);
-
-            // If turn off projector, need to send signal twice due to confirmation
-            if (model.device === "Projector" && model.command === "TurnOff") {
-                logger.info('Target device is a projector and requested operation is TurnOff. Sending signal again.');
-                // Wait a few seconds
-                await setTimeout(() => {
-                    device.sendData(hexDataBuffer);
-                }, 3000);
-            }
-
-            resolve();              
+            resolve(response);              
         });
     }
 }
